<resources>
    <string name="app_name">Dashboard</string>
    <string name="app_description">Bringing the things around you to life.</string>
    <string name="legal_text_1">Please accept our</string>
    <string name="legal_text_2"><u>Terms of Service</u>.</string>
    <string name="ellipsis">&#8230;</string>
    <string name="select_device">select a device to configure</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="title_alljoyn_devices">AllJoyn Services</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="enter">Enter</string>
    <string name="finish">Finish</string>
    <string name="confirm">Confirm</string>
    <string name="enable">Enable</string>
    <string name="cancel">Cancel</string>
    <string name="cont">Continue</string>
    <string name="okay">Okay</string>
    <string name="exit">Exit</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="try_again">Try Again</string>
    <string name="remove_from_my_devices">Remove Device From My Devices</string>
    <string name="configure_device">Configure Device</string>
    <string name="login">Login</string>
    <string name="unlock">Unlock</string>
    <string name="scan">Scan To Unlock</string>
    <string name="restart">Restart</string>
    <string name="reset">Reset</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="dismiss">Dismiss</string>
    <string name="delete">Delete</string>
    <string name="launch">Launch</string>
    <string name="quit">Quit</string>
    <string name="wait">Wait</string>
    <string name="navmenu_button">Nav</string>
    <string name="navmenu_feed">Notifications</string>
    <string name="navmenu_feed_num">Notifications %s</string>
    <string name="navmenu_my_devices">My Devices</string>
    <string name="navmenu_nearby_devices">Browse Nearby</string>
    <string name="navmenu_add_devices">Add Device</string>
    <string name="navmenu_settings">Settings</string>
    <string name="navmenu_help">Help</string>
    <string name="navmenu_header_setup">Setup</string>
    <string name="navmenu_header_help">Help &amp; Settings</string>
    <string name="maindevices_nearby_devices">Nearby Devices</string>
    <string name="alert_title_confirm_legal_decline">Are you sure?</string>
    <string name="alert_message_confirm_legal_decline">You may not use this application until you\'ve accepted the terms of service.</string>
    <string name="alert_title_confirm_device_passphrase">Enter Device Security Passphrase</string>
    <string name="alert_message_confirm_device_passphrase">Please confirm this device\'s security passphrase in order to edit its settings.</string>
    <string name="alert_title_incorrect_device_passphrase">Sorry</string>
    <string name="alert_message_incorrect_device_passphrase">Incorrect device security passphrase, please try again.</string>
    <string name="alert_title_not_matching_device_passphrase">Sorry</string>
    <string name="alert_message_not_matching_device_passphrase">Device security passphrase did not match, please try again.</string>
    <string name="alert_message_connecting_to_network">Verifying Device Network Password and connecting to network&#8230;</string>
    <string name="alert_message_removing_device">Removing device from network&#8230;</string>
    <string name="alert_message_connected_waiting_for_announcement">Device connected. Waiting for device to be ready&#8230;</string>
    <string name="alert_message_verifying_device_passphrase">Verifying Device Security Passphrase&#8230;</string>
    <string name="alert_title_confirm_existing_device_passphrase">Error</string>
    <string name="alert_message_confirm_existing_device_passphrase">The device security passphrase you entered is incorrect. Please try again.</string>
    <string name="alert_message_confirm_new_device_passphrase">The device security passphrases you entered don\'t match. Please try again.</string>
    <string name="alert_title_connect_wifi_network_list">Available Networks</string>
    <string name="alert_title_connect_wifi_pass_type">Select Password Format</string>
    <string name="alert_title_manage_device_confirm_remove">Remove from My Devices</string>
    <string name="alert_message_manage_device_confirm_remove">This device will no longer appear in My Devices, but will stay configured to your network and appear in the Browse Nearby screen.</string>
    <string name="alert_title_no_wifi">No WiFi Connection</string>
    <string name="alert_message_no_wifi">Please connect to a WiFi network to interact with Alljoyn devices.</string>
    <string name="alert_message_no_wifi_feed">You may be missing notifications because you are not connected to a WiFi network.</string>
    <string name="alert_title_no_devices_found">No Alljoyn devices found</string>
    <string name="alert_message_no_devices_found">Please check your WiFi connection and make sure the devices are turned ON.</string>
    <string name="alert_title_unable_to_connect">Unable to Connect</string>
    <string name="alert_message_unable_to_connect">Unable to join %s. Please check the WiFi name and password.</string>
    <string name="alert_title_camera_error">Oops</string>
    <string name="alert_message_camera_error">Looks like something is wrong with the camera, so we cannot launch the QR code viewfinder.</string>
    <string name="alert_title_confirm_restart_device">Restart Device</string>
    <string name="alert_message_confirm_restart_device">Your device will be restarted. Your changes will be saved but we recommend you use this only if you are having connection problems.</string>
    <string name="alert_title_confirm_reset_device">Are you sure?</string>
    <string name="alert_message_confirm_reset_device">Your device will be reset to its original configuration.</string>
    <string name="alert_title_qr_code_error">Error</string>
    <string name="alert_message_qr_code_error">QR code not formatted correctly.</string>
    <string name="alert_title_incorrect_device_network_password">Sorry</string>
    <string name="alert_message_incorrect_device_network_password">Incorrect device network password. Please try again.</string>
    <string name="alert_title_confirm_cancel_device_setup">Cancel Device Setup</string>
    <string name="alert_message_confirm_cancel_device_setup">Are you sure you want to cancel the \"%s\" device setup?</string>
    <string name="alert_title_connection_failed">Connection Failed</string>
    <string name="alert_message_connection_to_device_failed">Unable to connect to the %s. Please reboot the device and try again.</string>
    <string name="alert_message_wifi_connection_failed">We encountered a problem connecting to \"%s\". Please check your Wi-Fi network and try again.</string>
    <string name="alert_title_device_not_found">Device Not Found</string>
    <string name="alert_message_device_not_found">Unable to communicate with \"%s\". Please reboot the device and try again.</string>
    <string name="alert_message_searching_for_device">Trying to communicate with \"%s\".</string>
    <string name="alert_title_factory_reset_failed">Factory Reset Failed</string>
    <string name="alert_message_factory_reset_failed">Unable to reset \"%s\". Please try again.</string>
     <string name="alert_message_restart_failed">Unable to restart \"%s\". Please try again.</string>
    <string name="alert_title_name_change_failed">Name Change Failed</string>
    <string name="alert_message_name_change_failed">Unable to change the \"%s\" device name. Please try again.</string>
    <string name="alert_title_wi_fi_is_disabled">Wi-Fi is disabled</string>
    <string name="alert_message_wi_fi_is_disabled">%s requires Wi-Fi. Please enable Wi-Fi.</string>
    <string name="alert_title_verification">Waiting For Device</string>
    <string name="alert_message_verification">Verification for %s is taking longer than expected</string>
    <string name="alert_title_configuration_error">Configuration Error</string>
    <string name="alert_message_configuration_error">Configure %s device failed. Try again.</string>
    <string name="toast_onboard_failed">Configuration failed, please try again.</string>
    <string name="toast_onboard_device_failed">Configuration failed for %s, please try again.</string>
    <string name="toast_onboard_empty_ssid">Please select a WiFi Network.</string>
    <string name="toast_onboard_empty_name">Please enter a Network Name.</string>
    <string name="toast_onboard_empty_wifi_password">Please enter a WiFi Network Password.</string>
    <string name="toast_onboard_empty_oem_password">Please enter the Device Network Password.</string>
    <string name="toast_onboard_connect_to_network_failed">Failed to connect to network. Please verify the Device Network Password you entered is correct.</string>
    <string name="toast_added_device">%s added to My Devices.</string>
    <string name="toast_device_passphrase_set">Device Security Passphrase Set</string>
    <string name="toast_device_passphrase_changed">Device Security Passphrase Changed</string>
    <string name="toast_device_passphrase_deleted">Device Security Passphrase Deleted</string>
    <string name="toast_device_removed">%s has been removed from My Devices.</string>
    <string name="toast_wifi_not_enabled">WiFi not enabled.</string>
    <string name="toast_network_scan_error">No networks found.</string>
    <string name="toast_connected_to">Connected to %s</string>
    <string name="toast_device_not_found">Device not found.</string>
    <string name="eula_title">Terms of Service</string>
    <string name="enter_device_password_title">This will change the password for the \"%s\" device.</string>
    <string name="checkbox_show_passwords">Show passwords</string>
    <string name="enter_device_current_password">Current Password</string>
    <string name="enter_device_passphrase_set_text_1">New Password</string>
    <string name="enter_device_passphrase_set_text_2">Confirm Password</string>
    <string name="enter_device_passphrase_hint_current_password">Enter Current Password</string>
    <string name="enter_device_passphrase_hint_set_1">Enter New Password</string>
    <string name="enter_device_passphrase_hint_set_2">Confirm New Password</string>
    <string name="settings_category_device_title">Device</string>
    <string name="settings_setup_home_wifi_title">Home Wi-Fi Setup</string>
    <string name="settings_setup_home_wifi_key">home_wifi_setup_key</string>
    <string name="settings_notifications_title">Device Notifications</string>
    <string name="settings_notifications_description">Show in Android notifications tray when device notification arrives</string>
    <string name="settings_notifications_key">settings_notifications_key</string>
    <string name="settings_ringtone_title">Notification Ringtone</string>
    <string name="settings_ringtone_key">settings_ringtone_key</string>
    <string name="settings_vibrate_title">Vibrate</string>
    <string name="settings_vibrate_summary">Vibrate when notification arrives</string>
    <string name="settings_vibrate_key">settings_vibrate_key</string>
    <string name="settings_category_about_title">About</string>
    <string name="settings_changelog_title">Change Log</string>
    <string name="settings_changelog_summary">Version</string>
    <string name="settings_changelog_key">settings_changelog_key</string>
    <string name="settings_third_party_licenses_title">Third Party Licenses</string>
    <string name="settings_third_party_licenses_key">settings_third_party_licenses_key</string>
</resources>