<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright AllSeen Alliance. All rights reserved.

Permission to use, copy, modify, and/or distribute this software for any
purpose with or without fee is hereby granted, provided that the above
copyright notice and this permission notice appear in all copies.

THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES
WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF
MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR
ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
	android:layout_marginLeft="30dp"
	android:layout_marginRight="30dp"
	android:orientation="vertical"
	android:background="#00000000" >

    <TextView android:id="@+id/alert_title_text"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
		android:background="@color/black"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/alert_title_confirm_device_passphrase"
		android:textColor="#ebebeb"
		android:textSize="20sp"
		android:drawablePadding="8dp" />

    <TextView android:id="@+id/alert_msg_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="26dp"
		android:background="#e6393939"
        android:gravity="center"
        android:text="@string/alert_message_confirm_device_passphrase"
		android:textColor="#aeaeae"
		android:textSize="16sp" />
	
    <EditText android:id="@+id/alert_confirm_password_edit"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_margin="10dp"
    	android:padding="10dp"
    	android:textAppearance="@style/edit_device_text_entry" />

    <LinearLayout android:id="@+id/alert_button_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
           <Button android:id="@+id/alert_pass_cancel"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
         	android:textSize="16sp"
         	android:focusable="true"
            android:textColor="@color/btn_pop"
        	android:background="@drawable/btn_pop"
           	android:text="@string/cancel" 
           	android:enabled="true"
           	/>

      
           
          <Button android:id="@+id/alert_pass_confirm"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
         	android:textSize="16sp"
         	android:focusable="false"
            android:textColor="@color/btn_pop"
        	android:background="@drawable/btn_pop"
            android:text="@string/confirm"
            android:enabled="false"
            />
        
     

    
    </LinearLayout>
</LinearLayout>


 
